k8s/minio.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: diario-obra
spec:
  selector:
    app: minio
  ports:
    - port: 9000
      targetPort: 9000
      name: api
    - port: 9001
      targetPort: 9001
      name: console

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: diario-obra
spec:
  selector:
    matchLabels:
      app: minio
  serviceName: minio-service
  replicas: 1
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          command: ["minio", "server", "/data", "--console-address", ":9001"]

          ports:
            - containerPort: 9000
              name: api
            - containerPort: 9001
              name: console
          volumeMounts:
            - name: minio-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: minio-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
